--- a/game.html
+++ b/game.html
@@ -29,11 +29,7 @@ title: Digital Narrative Project
 <h1>Works Cited</h1>
 
 <p class="works-cited">
-  Lastname, Firstname <em>Book Title</em>. Press, 2025.
+  Wang, Haijie  Zhang, Tianyi  Zhang, Zhenhua  Feng, Yanchao <em>What is the global causality between geopolitical risks, government governance, and energy transition? Empirical evidence from cross-country data</em>. Vol. 20, no. 1, pp. 1 – 23.
 </p>
 
-<p class="works-cited">
-  Doe, Jane. "Journal Article.” <em>Journal Name</em>, vol. 15, no. 2, 2025, pp. 45–67.
-</p>
 
-  
