--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@ title: Digital Narrative Project
 <p> Play if you think you have what it takes! </p>
 
   <h1> Abstract </h1>
-  <p>Here is where you can paste your abstract. I strongly suggest writing it with a word processing tool that checks spelling for you, as Github does not do this (please let me know if you see typos on this page!) The Works Cited page won't appear as a separate page <i>here</i> but that's okay. </p>
+  <p>The objective with this narrative was to place the reader into the high-pressure scenarios officials get placed in when enacting policy regarding environmental issues, which, specifically, I chose to address air pollution as an example. Twine served as the best tool to convey this concept due to its branching nature coinciding well with choice based consequences being demonstrated. Though this was done through a highly simplified lens, the objective is met all the same. This was achieved through the variance in endings the reader could reach based on their choices.</p>
 
 
 <style>
@@ -29,7 +29,7 @@ title: Digital Narrative Project
 <h1>Works Cited</h1>
 
 <p class="works-cited">
-  Wang, Haijie  Zhang, Tianyi  Zhang, Zhenhua  Feng, Yanchao <em>What is the global causality between geopolitical risks, government governance, and energy transition? Empirical evidence from cross-country data</em>. Vol. 20, no. 1, pp. 1 – 23.
+  Wang, Haijie  Zhang, Tianyi  Zhang, Zhenhua  Feng, Yanchao. <em>What is the global causality between geopolitical risks, government governance, and energy transition? Empirical evidence from cross-country data.</em>. Vol. 20, no. 1, pp. 1 – 23.
 </p>
 
 
