--- a/tracery.html
+++ b/tracery.html
@@ -4,7 +4,7 @@
 <p> <a href="ayalajaxel.github.io/DIG3171/">Home</a>
 <p> This template was copied from <a href="https://iloveepoetry.org/creative/tracery2htmltemplate.html">Leonardo Flores's page</a> and modified for this class.</p>
   <meta charset="UTF-8">
-  <title>{{ page.title }}</title>
+  <title>{{ Slots of Pollution }}</title>
 </head>
 	<body>
 
@@ -118,8 +118,8 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
             <!-- Replace the statement below with your abstract. -->
             <div class="modal-content">
                 <span class="close">×</span>
-                <p> This is my abstract! I wrote a lot of cool things in Word or Google Docs and then pasted it into the code under the comment "Replace the statement below with your abstract" Woo.
-				</p> 
+                <p> The objective of this project was to bring further awareness to pollution by branching further out from just air pollution. Bringing other types of pollution helps highlight the fact that pollution as a complete concept is a much more serious problem than we care to admit as a species. Once again, this is done through simplicity as a means to test broad knowledge on the different types of pollution and their effect on our planet.
+
             </div>
         </div>
     <script> /* In the var immediately below, copy-paste your Tracery/CBDQ JSON between the {} brackets */
