--- a/tracery.html
+++ b/tracery.html
@@ -2,9 +2,7 @@
 <html>
 	<head>
 <p> <a href="ayalajaxel.github.io/DIG3171/">Home</a>
-<p> This template was copied from <a href="https://iloveepoetry.org/creative/tracery2htmltemplate.html">Leonardo Flores's page</a> and modified for this class.</p>
-  <meta charset="UTF-8">
-  <title>{{ Slots of Pollution }}</title>
+  <title> Slots of Pollution </title>
 </head>
 	<body>
 
