--- a/tracery.html
+++ b/tracery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-<p> <a href="ayalajaxel.github.io/DIG3171/">Home</a>
+<p> <a href="https://ayalajaxel.github.io/DIG3171/">Home</a>
   <title> Slots of Pollution </title>
 </head>
 	<body>
