--- a/tracery.html
+++ b/tracery.html
@@ -26,7 +26,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: RebeccaPurple;
+        background-color:DarkRed;
     }
     
     #title-container {
