--- a/tracery.html
+++ b/tracery.html
@@ -103,7 +103,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
 </style>
     </head>
     <body>
-		<div id="title-container">Tracery Fun!</div>
+		<div id="title-container">Slots of Pollution</div>
 
         <div id="text-container">This engine teach you the basics of Tracery grammar!</div>
 
