--- a/tracery.html
+++ b/tracery.html
@@ -116,7 +116,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
             <!-- Replace the statement below with your abstract. -->
             <div class="modal-content">
                 <span class="close">×</span>
-                <p> The objective of this project was to bring further awareness to pollution by branching further out from just air pollution. Bringing other types of pollution helps highlight the fact that pollution as a complete concept is a much more serious problem than we care to admit as a species. Once again, this is done through simplicity as a means to test broad knowledge on the different types of pollution and their effect on our planet.
+                <p> The objective of this project was to bring further awareness to pollution by branching further out from just air pollution. Bringing other types of pollution helps highlight the fact that pollution as a complete concept is a much more serious problem than we care to admit as a species. Once again, this is done through simplicity as a means to test broad knowledge on the different types of pollution and their effect on our planet. Sabir, B., Ahmed, S., Altaf, F. et al. Removal of Dyes from Wastewater by Adsorption on Abies Pindrow Cone. Water Air Soil Pollut 236, 641 (2025).
 
             </div>
         </div>
